[package]
name = "html_parsing_tools"
version = "0.21.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "html_parsing_tools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
kuchiki = "0.8.1"
linkify = "0.9.0"
regex = "1.6.0"
